tests/positive/issue1879/LetSynonym.juvix
module LetSynonym;

type T := t : T;

open T using {t} public;

main : T :=
  let
    A : Type := T;
    x : A := t;
  in x;
